# VTK-QT-CMake

./: .gitignore  README.md
changeImagePixel/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
closedDetect/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
color2Gray/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
conceptScalars/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
connectedCompExtract/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
createImageData/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
cylinder/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
